# KidPromises

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
apple/: .gitignore  .swiftformat  .swiftlint.yml  README.md  project.yml
apple/Common/: PeopleWorkApp.swift
apple/Mac/: MacGoodbye.swift  MacHello.swift
apple/MacTests/: SampleTest.swift
apple/MacUITests/: SampleUITest.swift
apple/Shared/: PeopleWorkApp.swift
apple/fastlane/: .env  .env.ios  .env.mac  .env.secret.example  Fastfile  README.md
apple/iOSTests/: SampleMobileTest.swift
apple/iOSUITests/: SampleMobileUITest.swift
shared/: Cargo.toml  build.rs
shared/src/: app.rs  lib.rs  uniffi.toml
shared_types/: build.rs
